<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.dhcc.ms</groupId>
		<artifactId>icore-spring-cloud</artifactId>
		<version>1.0.0-SNAPSHOT</version>
	</parent>
	<artifactId>icore-zuul-gateway</artifactId>
	<packaging>jar</packaging>
	<description>Zuul gateway project</description>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>1.7</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>com.dhcc.ms</groupId>
			<artifactId>icore-ms-utils</artifactId>
			<version>1.0.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-zuul</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-config</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>appassembler-maven-plugin</artifactId>
				<version>1.7</version>
				<configuration>
					<configurationDirectory>conf</configurationDirectory>
					<includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
					<repositoryLayout>flat</repositoryLayout>
					<useWildcardClassPath>true</useWildcardClassPath>
					<daemons>
						<daemon>
							<id>msdemo-zuul-gateway</id>
							<mainClass>com.dhcc.ms.zuul.gateway.MsdemoZuulGatewayApplication</mainClass>
							<platforms>
								<platform>jsw</platform>
							</platforms>
							<jvmSettings>
								<!-- 启动内存配置 -->
								<maxStackSize>128</maxStackSize>
								<extraArguments>
									<extraArgument>-server</extraArgument>
									<extraArgument>-XX:+AggressiveOpts</extraArgument>
									<extraArgument>-Xmx2G</extraArgument>
									<extraArgument>-XX:+HeapDumpOnOutOfMemoryError</extraArgument>
									<!-- <extraArgument>-Xloggc:gc.log</extraArgument> -->
								</extraArguments>
							</jvmSettings>
							<generatorConfigurations>
								<generatorConfiguration>
									<generator>jsw</generator>
									<includes>
										<include>aix-ppc-32</include>
										<include>aix-ppc-64</include>
										<include>hpux-parisc-64</include>
										<include>linux-x86-32</include>
										<include>linux-x86-64</include>
										<include>linux-ppc-64</include>
										<include>macosx-ppc-32</include>
										<include>macosx-x86-universal-32</include>
										<include>macosx-universal-32</include>
										<include>macosx-universal-64</include>
										<include>solaris-sparc-32</include>
										<include>solaris-sparc-64</include>
										<include>solaris-x86-32</include>
										<include>windows-x86-32</include>
										<include>windows-x86-64</include>
									</includes>
									<configuration>
										<property>
											<name>configuration.directory.in.classpath.first</name>
											<value>conf</value>
										</property>
										<property>
											<name>set.default.REPO_DIR</name>
											<value>lib</value>
										</property>
										<property>
											<name>wrapper.logfile</name>
											<value>%HOME%/logs/wrapper-msdemo-zuul-gateway.log</value>
										</property>
										<property>
											<name>wrapper.logfile.maxsize</name>
											<value>10m</value>
										</property>
										<property>
											<name>wrapper.logfile.maxfiles</name>
											<value>20</value>
										</property>
										<property>
											<name>wrapper.ntservice.interactive</name>
											<value>true</value>
										</property>
									</configuration>
								</generatorConfiguration>
							</generatorConfigurations>
						</daemon>
					</daemons>
				</configuration>
				<executions>
					<execution>
						<id>generate-jsw</id>
						<phase>package</phase>
						<goals>
							<goal>generate-daemons</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<descriptors>
						<descriptor>src/main/assembly/assembly-linux.xml</descriptor>
						<descriptor>src/main/assembly/assembly-unix.xml</descriptor>
						<descriptor>src/main/assembly/assembly-win.xml</descriptor>
					</descriptors>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-deploy-plugin</artifactId>
				<configuration>
					<!-- 应用不部署jar包 -->
					<skip>true</skip>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
